--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#154758</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="appPrimaryColor">#154758</color>"
+    <color name="appStrokes">#E5E9EB</color>"
+    <color name="appBackground">#F8FDFF</color>"
+    <color name="appIcons">#666666</color>
+    <color name="white">#FFFFFF</color>
 </resources>
