--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/appPrimaryColor</item>
+    </style>
+
+    <style name="AuthLabels" parent="TextAppearance.Design.Hint">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/appIcons</item>
+        <item name="android:textSize">14sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State-->
+        <item name="android:textColor">@color/appIcons</item>
+
+    </style>
+
+
+
 </resources>
