--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="appIcons">#666666</color>
     <color name="white">#FFFFFF</color>
     <color name="appSecondaryColor"> #29abab</color>
+    <color name="appFonts">#696969</color>
 </resources>
