--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -121,10 +121,11 @@
             </ImageView>
 
             <androidx.appcompat.widget.AppCompatSpinner
-                android:layout_width="185dp"
+                android:id="@+id/BankInfo"
+                android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="3dp"
+                android:layout_marginEnd="1dp"
                 android:hint="Bank Information">
 
             </androidx.appcompat.widget.AppCompatSpinner>
@@ -215,13 +216,10 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/signup_floating_button"
+        android:id="@+id/next"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -235,4 +233,10 @@
         android:layout_marginTop="502dp"
         app:srcCompat="@drawable/baseline_arrow_forward_24" />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
