--- a/app/src/main/res/layout/activity_estimated_monthly_expense.xml
+++ b/app/src/main/res/layout/activity_estimated_monthly_expense.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".views.budgeting.estimated_monthly_expense">
+
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
@@ -21,7 +22,6 @@
         android:textColor="@color/appIcons"
         android:textSize="16sp"
         android:textAlignment="center"
-
         android:paddingLeft="60dp"
         android:paddingRight="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,6 @@
         app:layout_constraintVertical_bias="0.24">
 
     </TextView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
@@ -66,6 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"></TextView>
 
+
         <TextView
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
@@ -77,9 +77,7 @@
             app:layout_constraintBottom_toTopOf="@id/circularImageView2"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv1"
-            ></TextView>
-
+            app:layout_constraintTop_toBottomOf="@+id/tv1"></TextView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/circularImageViewl"
@@ -110,7 +108,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/circularImageViewl"
             app:layout_constraintBottom_toTopOf="@id/circularImageView4"
-app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
             ></TextView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -154,15 +152,15 @@ app:layout_constraintRight_toLeftOf="parent"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="left|top"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="80dp"
             android:backgroundTint="@color/appSecondaryColor"
             android:tint="@color/white"
             app:fabCustomSize="@android:dimen/notification_large_icon_width"
-        app:layout_constraintTop_toBottomOf="@id/circularImageView4"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintRight_toLeftOf="@id/circularImageView8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/circularImageView4"
             app:useCompatPadding="true" />
 
         <TextView
@@ -302,7 +300,7 @@ app:layout_constraintRight_toLeftOf="parent"
             android:backgroundTint="@color/appSecondaryColor"
             android:tint="@color/white"
             app:fabCustomSize="@android:dimen/notification_large_icon_width"
-           app:layout_constraintLeft_toRightOf="@id/circularImageView2"
+            app:layout_constraintLeft_toRightOf="@id/circularImageView2"
             app:layout_constraintStart_toEndOf="@id/circularImageView2"
             app:layout_constraintBottom_toTopOf="@id/circularImageView6"
             app:layout_constraintTop_toBottomOf="@id/tv2"
@@ -372,7 +370,7 @@ app:layout_constraintRight_toLeftOf="parent"
             android:backgroundTint="@color/appSecondaryColor"
             android:tint="@color/white"
             app:fabCustomSize="@android:dimen/notification_large_icon_width"
-           app:layout_constraintLeft_toRightOf="@id/circularImageView8"
+            app:layout_constraintLeft_toRightOf="@id/circularImageView8"
             app:layout_constraintTop_toBottomOf="@id/circularImageView6"
             app:layout_constraintStart_toEndOf="@id/circularImageView8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -413,5 +411,6 @@ app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:fabCustomSize="@android:dimen/notification_large_icon_width"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
