--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="white">#FFFFFF</color>
     <color name="appSecondaryColor"> #29abab</color>
     <color name="appFonts">#696969</color>
+    <color name="black">#000000</color>
+    <color name="seagreen">#169198</color>
+    <color name="recycleviewcolor">#F5F5F5</color>
+
 </resources>
