--- a/app/src/main/res/drawable/setamountlayout.xml
+++ b/app/src/main/res/drawable/setamountlayout.xml
@@ -4,10 +4,8 @@
 
     android:shape="rectangle"
     >
-    <solid android:color="@android:color/transparent"></solid>
+    <solid android:color="@color/seagreen"></solid>
     <corners android:radius="20dp"></corners>
-    <stroke  android:color="@color/appPrimaryColor"
-        android:width="1.5dp"></stroke>
 
 
 </shape>
